--- a/index.html
+++ b/index.html
@@ -1,140 +1,130 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cyber Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>SAYANI MAITY — Digital Forensics & Ethical Hacking</title>
+<meta name="description" content="Portfolio & resume of SAYANI MAITY — Digital Forensics student."/>
+<link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-  <canvas id="matrix"></canvas>
+<canvas id="matrix"></canvas>
+<header class="site-header container">
+  <div class="brand">SAYANI <span>MAITY</span></div>
+  <nav class="top-nav">
+    <a href="#about">About</a>
+    <a href="#skills">Skills</a>
+    <a href="#projects">Projects</a>
+    <a href="#research">Research</a>
+    <a href="#contact">Contact</a>
+    <a class="btn" href="resume.pdf" download>Download Resume</a>
+  </nav>
+</header>
 
-  <header class="site-header container">
-    <div class="brand">Sayani<span>.Portfolio</span></div>
-    <nav class="top-nav">
-      <a href="#about">About</a>
-      <a href="#skills">Skills</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
-
-  <!-- Hero -->
-  <section class="hero container" id="about">
+<main class="container">
+  <section class="hero">
     <div class="hero-left">
-      <h1>Hi, I'm <span class="big-name">Sayani</span></h1>
-      <p class="lead">Digital Forensic Analyst & Ethical Hacker</p>
+      <h1>Ethical Hacker (Pentester) & Digital Forensics Enthusiast</h1>
+      <p class="lead">I investigate digital evidence, build security tools, and research applied techniques in cybersecurity. Open to internships, bug bounties, and collaborations.</p>
+      <div class="hero-cta">
+        <a class="btn" href="#projects">View Projects</a>
+        <a class="btn ghost" href="#contact">Contact Me</a>
+      </div>
       <ul class="meta">
-        <li>📍 Location: India</li>
-        <li>🎓 Student of Forensics & Cybersecurity</li>
+        <li><strong>Study:</strong> B.Sc. Digital Forensics (MAKAUT, 2023–2026)</li>
+        <li><strong>Goal:</strong> Digital Forensic Enthusiast, Ethical Hacker (Pentester), and an Academic Researcher</li>
       </ul>
     </div>
-    <div class="hero-right">
+    <aside class="hero-right">
       <div class="profile-card">
-        <div class="photo-wrap">
-          <img src="assets/profile.jpg" alt="Sayani">
-        </div>
+        <div class="photo-wrap"><img src="assets/profile.jpg" alt="SAYANI"></div>
         <div class="info">
-          <h2>Sayani</h2>
-          <p>Cybersecurity Enthusiast</p>
+          <h2>SAYANI MAITY</h2>
+          <p>Digital Forensics (DFIR) Student</p>
           <div class="socials">
-            <a href="#">GitHub</a>
-            <a href="#">LinkedIn</a>
-            <a href="#">Twitter</a>
+            <a href="https://github.com/isayani-78" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/sayanimaity/" target="_blank">LinkedIn</a>
+            <a href="mailto:sayanimaity2024@gmail.com">Email</a>
+            <a href="https://discord.com/invite/isayani_78" target="_blank">Discord</a>
+            <a href="https://www.geeksforgeeks.org/user/isayani_05/" target="_blank">GeeksforGeeks</a>
+            <a href="https://medium.com/@isayani-78" target="_blank">Medium</a>
+            <a href="https://www.facebook.com/isayani78" target="_blank">Facebook</a>
           </div>
         </div>
       </div>
 
-      <div class="slideshow">
-        <div class="slide active"><img src="assets/slide1.jpg" alt=""><div class="cap">Forensics</div></div>
-        <div class="slide"><img src="assets/slide2.jpg" alt=""><div class="cap">Pentesting</div></div>
-        <div class="slide"><img src="assets/slide3.jpg" alt=""><div class="cap">Cyber Tools</div></div>
-        <div class="slide"><img src="assets/slide4.jpg" alt=""><div class="cap">Investigation</div></div>
-        <div class="slide-controls">
-          <button id="prev" class="btn ghost">◀</button>
-          <button id="next" class="btn ghost">▶</button>
-        </div>
+      <div class="slideshow" id="slideshow">
+        <div class="slide active"><img src="assets/CMTL — CyberSec Multi-Tool Launcher.jpg" alt=""><div class="cap">CMTL — CyberSec Multi-Tool Launcher</div></div>
+        <div class="slide"><img src="assets/AI- powered Phishing Email Detector (In Development).jpg" alt=""><div class="cap">AI- powered Phishing Email Detector</div></div>
+        <div class="slide"><img src="assets/Forensic Case Study.jpg" alt=""><div class="cap">Forensic Case Study</div></div>
+        <div class="controls"><button id="prev">‹</button><button id="next">›</button></div>
       </div>
+    </aside>
+  </section>
+
+  <!-- ✨ Quote Section -->
+  <section id="quote" class="section quote-section">
+    <div class="quote-container">
+      <img src="assets/empire.jpg" alt="Empire Motivation" class="quote-img"/>
+      <blockquote>
+        “An empire isn’t built in a day… <br> it’s built every day…”
+      </blockquote>
+    </div>
+  </section>
+
+  <!-- About Section -->
+  <section id="about" class="section two-col">
+    <div>
+      <h2>About Me</h2>
+      <p>I am <strong>SAYANI MAITY</strong>, currently pursuing my <strong>B.Sc. in Digital Forensics</strong> at the Indian School of Ethical Hacking under MAKAUT (2023–2026). With a foundation in pure sciences from St. Thomas' High School (ICSE, ISC), I blend academic research and hands-on practice in areas such as digital forensics, penetration testing, and OSINT. I enjoy producing forensic case reports, building practical security tools, and investigating system artifacts to reconstruct events.</p>
+      <p>My academic and project work focuses on secure coding, artifact recovery, and applied machine learning for security. I am actively developing tools and prototypes such as <em>CMTL</em> (CyberSec Multi-Tool Launcher) and an <em>AI-powered Phishing Email Detector</em>. I am open to mentorships, collaborations, internships, and research partnerships.</p>
+    </div>
+    <div class="side-note">
+      <h3>Education</h3>
+      <p><strong>ICSE, ISC</strong><br>St. Thomas' High School</p>
+      <p><strong>B.Sc. Digital Forensics</strong><br>Indian School of Ethical Hacking, under MAKAUT (2023–2026)</p>
+      <h3>Hobbies</h3>
+      <p>Painting • CTFs • Research • VAPT</p>
     </div>
   </section>
 
   <!-- Skills -->
-  <section class="section container" id="skills">
-    <h2>My Skills</h2>
+  <section id="skills" class="section">
+    <h2>Skills</h2>
     <div class="skill-grid">
-      <div class="skill-col">
-        <h3>Forensics</h3>
-        <div class="skill" data-val="85">
-          <label>Autopsy</label>
-          <div class="bar"><div class="fill"></div></div>
-        </div>
-        <div class="skill" data-val="75">
-          <label>FTK Imager</label>
-          <div class="bar"><div class="fill"></div></div>
-        </div>
-      </div>
-
-      <div class="skill-col">
-        <h3>Cybersecurity</h3>
-        <div class="skill" data-val="80">
-          <label>Nmap</label>
-          <div class="bar"><div class="fill"></div></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Metasploit</label>
-          <div class="bar"><div class="fill"></div></div>
-        </div>
-      </div>
-
-      <div class="skill-col">
-        <h3>Programming</h3>
-        <div class="skill" data-val="90">
-          <label>Python</label>
-          <div class="bar"><div class="fill"></div></div>
-        </div>
-        <div class="skill" data-val="65">
-          <label>JavaScript</label>
-          <div class="bar"><div class="fill"></div></div>
-        </div>
-      </div>
+      <div class="skill"><label>Digital Forensics</label><div class="bar"><div class="fill" data-percent="90"></div></div></div>
+      <div class="skill"><label>Penetration Testing</label><div class="bar"><div class="fill" data-percent="85"></div></div></div>
+      <div class="skill"><label>Python / Scripting</label><div class="bar"><div class="fill" data-percent="80"></div></div></div>
+      <div class="skill"><label>OSINT & Case Study</label><div class="bar"><div class="fill" data-percent="88"></div></div></div>
     </div>
   </section>
 
   <!-- Projects -->
-  <section class="section container" id="projects">
+  <section id="projects" class="section">
     <h2>Projects</h2>
     <div class="projects">
-      <div class="project">
-        <h3>Custom Authentication System</h3>
-        <p>Developed a secure authentication system with penetration testing.</p>
-      </div>
-      <div class="project">
-        <h3>Network Scanner Tool</h3>
-        <p>Built a Python-based scanner for OS detection, services, and vulnerabilities.</p>
-      </div>
-      <div class="project">
-        <h3>Forensic Case Study</h3>
-        <p>Analyzed evidence using industry tools to present findings.</p>
-      </div>
+      <div class="project"><h3>CMTL</h3><p>CyberSec Multi-Tool Launcher for scanning, forensic, and analysis tasks.</p></div>
+      <div class="project"><h3>Phishing Email Detector</h3><p>AI-powered detection of phishing emails with NLP models.</p></div>
+      <div class="project"><h3>Case Study Reports</h3><p>Documented forensic investigations on system artifacts & breaches.</p></div>
     </div>
   </section>
 
   <!-- Contact -->
-  <section class="section container contact" id="contact">
-    <h2>Contact Me</h2>
-    <form id="contact-form" action="REPLACE_WITH_YOUR_ENDPOINT" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" rows="5" placeholder="Your Message"></textarea>
-      <button type="submit" class="btn">Send Message</button>
-      <p class="hint">Form requires a backend (e.g., Formspree.io)</p>
+  <section id="contact" class="section contact">
+    <h2>Contact</h2>
+    <form>
+      <input type="text" placeholder="Your Name" required/>
+      <input type="email" placeholder="Your Email" required/>
+      <textarea placeholder="Your Message" rows="4" required></textarea>
+      <button class="btn" type="submit">Send</button>
+      <p class="hint">Or email me directly at <strong>sayanimaity2024@gmail.com</strong></p>
     </form>
   </section>
 
   <footer class="site-footer">
-    <p>© 2025 Sayani - Cyber Portfolio</p>
+    <p>© <span id="year"></span> Sayani Maity — Built with care • Hosted on GitHub Pages</p>
   </footer>
-
-  <script src="script.js"></script>
+</main>
+<script src="script.js"></script>
 </body>
 </html>
