--- a/index.html
+++ b/index.html
@@ -1,130 +1,177 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>SAYANI MAITY — Digital Forensics & Ethical Hacking</title>
-<meta name="description" content="Portfolio & resume of SAYANI MAITY — Digital Forensics student."/>
-<link rel="stylesheet" href="styles.css"/>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>SAYANI MAITY — Digital Forensics & Ethical Hacking</title>
+  <meta name="description" content="Portfolio & resume of SAYANI MAITY — Digital Forensics student."/>
+  <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-<canvas id="matrix"></canvas>
-<header class="site-header container">
-  <div class="brand">SAYANI <span>MAITY</span></div>
-  <nav class="top-nav">
-    <a href="#about">About</a>
-    <a href="#skills">Skills</a>
-    <a href="#projects">Projects</a>
-    <a href="#research">Research</a>
-    <a href="#contact">Contact</a>
-    <a class="btn" href="resume.pdf" download>Download Resume</a>
-  </nav>
-</header>
+  <!-- matrix background canvas (full-page) -->
+  <canvas id="matrix"></canvas>
 
-<main class="container">
-  <section class="hero">
-    <div class="hero-left">
-      <h1>Ethical Hacker (Pentester) & Digital Forensics Enthusiast</h1>
-      <p class="lead">I investigate digital evidence, build security tools, and research applied techniques in cybersecurity. Open to internships, bug bounties, and collaborations.</p>
-      <div class="hero-cta">
-        <a class="btn" href="#projects">View Projects</a>
-        <a class="btn ghost" href="#contact">Contact Me</a>
-      </div>
-      <ul class="meta">
-        <li><strong>Study:</strong> B.Sc. Digital Forensics (MAKAUT, 2023–2026)</li>
-        <li><strong>Goal:</strong> Digital Forensic Enthusiast, Ethical Hacker (Pentester), and an Academic Researcher</li>
-      </ul>
-    </div>
-    <aside class="hero-right">
-      <div class="profile-card">
-        <div class="photo-wrap"><img src="assets/profile.jpg" alt="SAYANI"></div>
-        <div class="info">
-          <h2>SAYANI MAITY</h2>
-          <p>Digital Forensics (DFIR) Student</p>
-          <div class="socials">
-            <a href="https://github.com/isayani-78" target="_blank">GitHub</a>
-            <a href="https://www.linkedin.com/in/sayanimaity/" target="_blank">LinkedIn</a>
-            <a href="mailto:sayanimaity2024@gmail.com">Email</a>
-            <a href="https://discord.com/invite/isayani_78" target="_blank">Discord</a>
-            <a href="https://www.geeksforgeeks.org/user/isayani_05/" target="_blank">GeeksforGeeks</a>
-            <a href="https://medium.com/@isayani-78" target="_blank">Medium</a>
-            <a href="https://www.facebook.com/isayani78" target="_blank">Facebook</a>
-          </div>
+  <!-- fixed slideshow (visible on all pages) -->
+  <div id="global-slideshow" aria-hidden="true">
+    <div class="gs-slide active"><img src="assets/CMTL — CyberSec Multi-Tool Launcher.jpg" alt="CMTL"></div>
+    <div class="gs-slide"><img src="assets/AI- powered Phishing Email Detector (In Development).jpg" alt="AI Phishing"></div>
+    <div class="gs-slide"><img src="assets/Forensic Case Study.jpg" alt="Case Study"></div>
+    <div class="gs-controls"><button id="gs-prev">‹</button><button id="gs-next">›</button></div>
+  </div>
+
+  <!-- top header -->
+  <header class="site-header container">
+    <div class="brand">SAYANI <span>MAITY</span></div>
+    <nav class="top-nav">
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
+      <a href="#projects">Projects</a>
+      <a href="#research">Research</a>
+      <a href="#contact">Contact</a>
+      <a class="btn" href="resume.pdf" download>Download Resume</a>
+    </nav>
+  </header>
+
+  <!-- main sections (page-like) -->
+  <main class="pages container">
+
+    <!-- Home (landing) -->
+    <section id="home" class="page active">
+      <div class="center-hero">
+        <div class="hero-photo">
+          <img src="assets/profile.jpg" alt="Sayani Maity">
+        </div>
+        <h1 class="hero-name">SAYANI MAITY</h1>
+        <p class="hero-sub">Digital Forensics Enthusiast • Ethical Hacker (Pentester) • Academic Researcher</p>
+
+        <!-- social/contact bar -->
+        <div class="contact-bar">
+          <a href="https://github.com/isayani-78" target="_blank">GitHub</a>
+          <a href="https://www.linkedin.com/in/sayanimaity/" target="_blank">LinkedIn</a>
+          <a href="mailto:sayanimaity2024@gmail.com">Email</a>
+          <a href="https://discord.com/invite/isayani_78" target="_blank">Discord</a>
+          <a href="https://www.geeksforgeeks.org/user/isayani_05/" target="_blank">GeeksforGeeks</a>
         </div>
       </div>
+    </section>
 
-      <div class="slideshow" id="slideshow">
-        <div class="slide active"><img src="assets/CMTL — CyberSec Multi-Tool Launcher.jpg" alt=""><div class="cap">CMTL — CyberSec Multi-Tool Launcher</div></div>
-        <div class="slide"><img src="assets/AI- powered Phishing Email Detector (In Development).jpg" alt=""><div class="cap">AI- powered Phishing Email Detector</div></div>
-        <div class="slide"><img src="assets/Forensic Case Study.jpg" alt=""><div class="cap">Forensic Case Study</div></div>
-        <div class="controls"><button id="prev">‹</button><button id="next">›</button></div>
+    <!-- About -->
+    <section id="about" class="page">
+      <div class="two-col">
+        <div>
+          <h2>About Me</h2>
+          <p>I am <strong>SAYANI MAITY</strong>, pursuing <strong>B.Sc. in Digital Forensics</strong> at the Indian School of Ethical Hacking (MAKAUT, 2023–2026). I blend academic research and hands-on practice across digital forensics, penetration testing, OSINT, and secure coding. I enjoy producing forensic case reports, building security tools, and reconstructing incident timelines from system artifacts.</p>
+          <p>Beyond technical work I participate in CTFs, bug bounties, and research collaborations. I value clear documentation, reproducible tools, and ethical practices in security research.</p>
+          <p><strong>Goal:</strong> Digital Forensic Enthusiast, Ethical Hacker (Pentester), and an Academic Researcher.</p>
+        </div>
+        <aside class="side-note">
+          <h3>Education</h3>
+          <p><strong>ICSE, ISC</strong><br>St. Thomas' High School</p>
+          <p><strong>B.Sc. Digital Forensics</strong><br>Indian School of Ethical Hacking, MAKAUT (2023–2026)</p>
+          <h3>Hobbies</h3>
+          <p>Painting • CTFs • Research • VAPT</p>
+        </aside>
       </div>
-    </aside>
-  </section>
+    </section>
 
-  <!-- ✨ Quote Section -->
-  <section id="quote" class="section quote-section">
-    <div class="quote-container">
-      <img src="assets/empire.jpg" alt="Empire Motivation" class="quote-img"/>
-      <blockquote>
-        “An empire isn’t built in a day… <br> it’s built every day…”
-      </blockquote>
-    </div>
-  </section>
+    <!-- Empire Quote (image only) -->
+    <section id="quote" class="page">
+      <div class="quote-only">
+        <!-- Put your JPG here (no text). Replace assets/empire.jpg with your file. -->
+        <img src="assets/empire.jpg" alt="inspirational image">
+      </div>
+    </section>
 
-  <!-- About Section -->
-  <section id="about" class="section two-col">
-    <div>
-      <h2>About Me</h2>
-      <p>I am <strong>SAYANI MAITY</strong>, currently pursuing my <strong>B.Sc. in Digital Forensics</strong> at the Indian School of Ethical Hacking under MAKAUT (2023–2026). With a foundation in pure sciences from St. Thomas' High School (ICSE, ISC), I blend academic research and hands-on practice in areas such as digital forensics, penetration testing, and OSINT. I enjoy producing forensic case reports, building practical security tools, and investigating system artifacts to reconstruct events.</p>
-      <p>My academic and project work focuses on secure coding, artifact recovery, and applied machine learning for security. I am actively developing tools and prototypes such as <em>CMTL</em> (CyberSec Multi-Tool Launcher) and an <em>AI-powered Phishing Email Detector</em>. I am open to mentorships, collaborations, internships, and research partnerships.</p>
-    </div>
-    <div class="side-note">
-      <h3>Education</h3>
-      <p><strong>ICSE, ISC</strong><br>St. Thomas' High School</p>
-      <p><strong>B.Sc. Digital Forensics</strong><br>Indian School of Ethical Hacking, under MAKAUT (2023–2026)</p>
-      <h3>Hobbies</h3>
-      <p>Painting • CTFs • Research • VAPT</p>
-    </div>
-  </section>
+    <!-- Skills (column-wise with progress bars) -->
+    <section id="skills" class="page">
+      <h2>Skills</h2>
+      <div class="skill-grid">
+        <!-- Column 1: Languages & Scripting -->
+        <div class="skill-col">
+          <h3>Languages & Scripting</h3>
+          <div class="skill" data-val="90"><label>Python</label><div class="bar"><div class="fill"><span class="pct">0%</span></div></div></div>
+          <div class="skill" data-val="85"><label>Bash</label><div class="bar"><div class="fill"><span class="pct">0%</span></div></div></div>
+          <div class="skill" data-val="75"><label>Shell Scripting</label><div class="bar"><div class="fill"><span class="pct">0%</span></div></div></div>
+          <div class="skill" data-val="70"><label>HTML</label><div class="bar"><div class="fill"><span class="pct">0%</span></div></div></div>
+        </div>
 
-  <!-- Skills -->
-  <section id="skills" class="section">
-    <h2>Skills</h2>
-    <div class="skill-grid">
-      <div class="skill"><label>Digital Forensics</label><div class="bar"><div class="fill" data-percent="90"></div></div></div>
-      <div class="skill"><label>Penetration Testing</label><div class="bar"><div class="fill" data-percent="85"></div></div></div>
-      <div class="skill"><label>Python / Scripting</label><div class="bar"><div class="fill" data-percent="80"></div></div></div>
-      <div class="skill"><label>OSINT & Case Study</label><div class="bar"><div class="fill" data-percent="88"></div></div></div>
-    </div>
-  </section>
+        <!-- Column 2: Security & Pentesting -->
+        <div class="skill-col">
+          <h3>Security & Pentesting</h3>
+          <div class="skill" data-val="85"><label>VAPT & Pentesting</label><div class="bar"><div class="fill"><span class="pct">0%</span></div></div></div>
+          <div class="skill" data-val="80"><label>Threat Management</label><div class="bar"><div class="fill"><span class="pct">0%</span></div></div></div>
+          <div class="skill" data-val="88"><label>OSINT & Research</label><div class="bar"><div class="fill"><span class="pct">0%</span></div></div></div>
+        </div>
 
-  <!-- Projects -->
-  <section id="projects" class="section">
-    <h2>Projects</h2>
-    <div class="projects">
-      <div class="project"><h3>CMTL</h3><p>CyberSec Multi-Tool Launcher for scanning, forensic, and analysis tasks.</p></div>
-      <div class="project"><h3>Phishing Email Detector</h3><p>AI-powered detection of phishing emails with NLP models.</p></div>
-      <div class="project"><h3>Case Study Reports</h3><p>Documented forensic investigations on system artifacts & breaches.</p></div>
-    </div>
-  </section>
+        <!-- Column 3: Forensics & Cloud -->
+        <div class="skill-col">
+          <h3>Forensics & Cloud</h3>
+          <div class="skill" data-val="92"><label>Digital Forensics</label><div class="bar"><div class="fill"><span class="pct">0%</span></div></div></div>
+          <div class="skill" data-val="80"><label>Networking & Forensics</label><div class="bar"><div class="fill"><span class="pct">0%</span></div></div></div>
+          <div class="skill" data-val="70"><label>Cloud & Threat Mgmt</label><div class="bar"><div class="fill"><span class="pct">0%</span></div></div></div>
+        </div>
+      </div>
+    </section>
 
-  <!-- Contact -->
-  <section id="contact" class="section contact">
-    <h2>Contact</h2>
-    <form>
-      <input type="text" placeholder="Your Name" required/>
-      <input type="email" placeholder="Your Email" required/>
-      <textarea placeholder="Your Message" rows="4" required></textarea>
-      <button class="btn" type="submit">Send</button>
-      <p class="hint">Or email me directly at <strong>sayanimaity2024@gmail.com</strong></p>
-    </form>
-  </section>
+    <!-- Projects (show images you provided) -->
+    <section id="projects" class="page">
+      <h2>Projects</h2>
+      <div class="projects">
+        <article class="project">
+          <img src="assets/CMTL — CyberSec Multi-Tool Launcher.jpg" alt="CMTL">
+          <h3>CMTL — CyberSec Multi-Tool Launcher</h3>
+          <p>Centralizes scanning, OS fingerprinting and quick forensic triage.</p>
+          <a href="https://github.com/isayani-78/CMTL" target="_blank">View on GitHub</a>
+        </article>
 
-  <footer class="site-footer">
+        <article class="project">
+          <img src="assets/AI- powered Phishing Email Detector (In Development).jpg" alt="AI Phishing">
+          <h3>AI-Powered Phishing Email Detector</h3>
+          <p>NLP + header & URL signals to detect phishing emails (in dev).</p>
+          <a href="https://github.com/isayani-78/AI-Powered-Phishing-Email-Detector" target="_blank">View on GitHub</a>
+        </article>
+
+        <article class="project">
+          <img src="assets/Forensic Case Study.jpg" alt="Case Study">
+          <h3>Forensic Case Study</h3>
+          <p>Documented forensic investigations and artifact recovery examples.</p>
+        </article>
+      </div>
+    </section>
+
+    <!-- Research -->
+    <section id="research" class="page">
+      <h2>Research & Goals</h2>
+      <p>I focus on forensic artifact analysis, timeline reconstruction, secure coding and applied security automation. Short-term: contribute to open-source forensic tooling and publish case studies. Long-term: work as a penetration tester and digital forensic investigator while contributing to academic research and teaching.</p>
+      <p>Current interests: AI-driven phishing detection, timeline reconstruction automation, threat intelligence pipelines, and privacy-preserving analysis techniques.</p>
+    </section>
+
+    <!-- Contact -->
+    <section id="contact" class="page">
+      <h2>Contact</h2>
+      <div class="contact-bar-large">
+        <a href="mailto:sayanimaity2024@gmail.com">Email</a>
+        <a href="https://github.com/isayani-78" target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com/in/sayanimaity/" target="_blank">LinkedIn</a>
+        <a href="https://x.com/isayani78" target="_blank">X</a>
+      </div>
+
+      <form id="contact-form" action="REPLACE_WITH_FORMSPREE_ENDPOINT" method="POST">
+        <label for="name">Name</label><input id="name" name="name" required/>
+        <label for="email">Email</label><input id="email" name="email" type="email" required/>
+        <label for="message">Message</label><textarea id="message" name="message" rows="5" required></textarea>
+        <button class="btn" type="submit">Send Message</button>
+        <p class="hint">Sign up for Formspree and replace the form action to receive messages.</p>
+      </form>
+    </section>
+
+  </main>
+
+  <footer class="site-footer container">
     <p>© <span id="year"></span> Sayani Maity — Built with care • Hosted on GitHub Pages</p>
   </footer>
-</main>
-<script src="script.js"></script>
+
+  <script src="script.js"></script>
 </body>
 </html>
