--- a/index.html
+++ b/index.html
@@ -103,3 +103,16 @@
     <h2>Empire</h2>
     <div class="empire-img">
       <img src="assets/empire.jpg" alt="An empire isn't built in a day...">
+    </div>
+  </section>
+
+</div>
+
+<div class="controls">
+  <button id="prev">‹</button>
+  <button id="next">›</button>
+</div>
+
+<script src="script.js"></script>
+</body>
+</html>
